--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,69 @@
-*.class
+# === SPRING ===================================================================
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+server/target/
+!server/.mvn/wrapper/maven-wrapper.jar
 
-# Package Files #
-*.jar
-*.war
-*.ear
+### STS ###
+server/.apt_generated
+server/.classpath
+server/.factorypath
+server/.project
+server/.settings
+server/.springBeans
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+### IntelliJ IDEA ###
+server/.idea
+server/*.iws
+server/*.iml
+server/*.ipr
+
+### NetBeans ###
+server/nbproject/private/
+server/build/
+server/nbbuild/
+server/dist/
+server/nbdist/
+server/.nb-gradle/
+
+# === ANGULAR ==================================================================
+
+# compiled output
+client/dist
+client/tmp
+client/out-tsc
+
+# dependencies
+client/node_modules
+
+# IDEs and editors
+client/.idea
+client/.project
+client/.classpath
+client/.c9/
+client/*.launch
+client/.settings/
+client/*.sublime-workspace
+
+# IDE - VSCode
+client/.vscode/*
+!client/.vscode/settings.json
+!client/.vscode/tasks.json
+!client/.vscode/launch.json
+!client/.vscode/extensions.json
+
+# misc
+client/.sass-cache
+client/connect.lock
+client/coverage
+client/libpeerconnection.log
+client/npm-debug.log
+client/testem.log
+client/typings
+
+# e2e
+client/e2e/*.js
+client/e2e/*.map
+
+# System Files
+client/.DS_Store
+client/Thumbs.db
