--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -2,4 +2,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/sample-jpa-service
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.generate-ddl=false
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
+logging.level.org.hibernate = debug
+logging.level.org.hibernate.type = trace
